bg color change

--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body, html{
   /* background-image: linear-gradient(to right, #292929 0%, black 100%); */
 
   /* light  */
-  background-image: linear-gradient(to right, #a0f5da,  #ba9af3);
-  /* background-image: linear-gradient(to right, #a8c0ff, #beb1f5); */
+  /* background-image: linear-gradient(to right, #a0f5da,  #ba9af3); */
+  background-image: linear-gradient(to right, #a8c0ff, #beb1f5);
   /* background-image: linear-gradient(to right, #b4e3e7, #83a4d4); */
   /* background-image: linear-gradient(to right, #d3cce3, #e9e4f0);  */
   
